fixed btn spacing

--- a/specials/specials.css
+++ b/specials/specials.css
@@ -25,6 +25,6 @@ a:hover {
 /* .containerDays{
   display: inline;
 } */
-#button1 {display:inline-block;margin-right:10px;}
+#button1 {display:inline-block;margin-right:10px;margin-left: 100px}
 #today {display:inline-block;}
 #button2 {display:inline-block;margin-left:10px;}
